--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,8 +83,7 @@
 </div>
 
 <hr />
-Result
-<div class="bg-light">
+<div class="bg-light container jumbotron">
   <pre>{{obj | json }}</pre>
 </div>
 <hr />
